--- a/Oblig1/src/main/resources/static/index.html
+++ b/Oblig1/src/main/resources/static/index.html
@@ -17,17 +17,17 @@
     <option>Mazerunner 3</option>
     <option>Avatar 1</option>
     <option>Avatar 2</option>
-    </select><span id="Filmcheck" ></span>
+    </select><span id="Filmcheck"  style="color: red"></span>
     <tr></tr>
-    <tr><td>Antall</td><td><input type="text" id="Antall"  min="1" style="width: 30px"></td><td><span id="Antallcheck"></span></td></tr>
+    <tr><td>Antall</td><td><input type="text" id="Antall"  min="1" style="width: 30px"></td><td><span id="Antallcheck"  style="color: red"></span></td></tr>
 
-    <tr><td>Fornavn</td><td><input type="text" id="Fornavn"></td><td><span id="Fornavncheck"></span></td></tr>
+    <tr><td>Fornavn</td><td><input type="text" id="Fornavn"></td><td><span id="Fornavncheck"  style="color: red"></span></td></tr>
 
-    <tr><td>Etternavn</td><td><input type="text" id="Etternavn"></td><td><span id="Etternavncheck"></span></td></tr>
+    <tr><td>Etternavn</td><td><input type="text" id="Etternavn"></td><td><span id="Etternavncheck"  style="color: red"></span></td></tr>
 
-    <tr><td>Telefonnr</td><td><input type="tel" id="Telefonnr" pattern="[0-9]{8}"></td><td><span id="Tlfcheck"></span></td></tr>
+    <tr><td>Telefonnr</td><td><input type="tel" id="Telefonnr" pattern="[0-9]{8}"></td><td><span id="Tlfcheck"  style="color: red"></span></td></tr>
 
-    <tr><td>Epost</td><td><input type="text" id="Epost"></td><td><span id="Epostcheck"></span></td></tr>
+    <tr><td>Epost</td><td><input type="text" id="Epost"></td><td><span id="Epostcheck"  style="color: red"></span></td></tr>
 
     <tr><td><button onclick="registrer()">Kjøp billett</button></td></tr>
 
